2015.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-b-destination-rule
spec:
  host: reviews
  subsets:
  - name: internal
    labels:
      - version: thorntail-mp-1.3
        version: liberty-mp-1.3
