details-without-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details-plain
spec:
  host: details
  subsets:
  - name: v1
    labels:
      version: v1
